Fix odd spacing on content in tables.

--- a/www/templates/html/css/majors.css
+++ b/www/templates/html/css/majors.css
@@ -163,3 +163,6 @@ a.top {
     margin:0;
 }
 
+#maincontent table p {
+    margin:0;
+}
